<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Настройки</string>
    <string name="action_login">Вход | Регистрация</string>
    <string name="personal_area">Личный Кабинет</string>


    <string name="app_name">ЕдаНяма</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Сообщение</string>
    <string name="gps_enabled">GPS Enabled</string>
    <string name="gps_disabled">GPS Disabled</string>

    <string name="nav_menu_home">Главная</string>
    <string name="nav_menu_profile">Профиль</string>
    <string name="nav_menu_company">Все заведения</string>
    <string name="nav_menu_dish">Все блюда</string>
    <string name="nav_menu_basket">Корзина</string>
    <string name="nav_menu_my_advert">Избранные заведения</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">Вход</string>
    <string name="fogot_password">Забыли пароль ?</string>
    <string name="prompt_email_phone"><font size="14">Ваш телефон или e-mail</font></string>
    <string name="prompt_email"><font size="14">Ваш e-mail</font></string>
    <string name="prompt_phone"><font size="14">Ваш телефон ( 10 цифр, без +7 )</font></string>
    <string name="prompt_comment"><font size="14">Ваш комментарий</font></string>
    <string name="prompt_password"><font size="14">Введите пароль</font></string>
    <string name="new_password"><font size="14">Новый пароль</font></string>
    <string name="old_password"><font size="14">Ваш старый пароль</font></string>
    <string name="confirm_password"><font size="14">Подтвердите пароль</font></string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="not_register">Еще не зарегистрированы?</string>
    <string name="registration">Регистрация</string>
    <string name="sign_in">Войти</string>
    <string name="sign_in_google">Войти через Google</string>
    <string name="error_required_field">Поле обязательно для заполнения</string>
    <string name="order_expected_pay">Заказ поступит в обработку, после оплаты</string>
    <string name="order_wait_pay">Ожидается Оплата</string>
    <string name="error_wrong_password">Введен неверный пароль</string>
    <string name="error_wrong_email">Введен неверный email</string>
    <string name="error_wrong_phone">Введен неверный номер телеона</string>
    <string name="internal_error">Внутренняя ошибка, повторите попытку позже</string>
    <string name="password_not_match">Пароли не совпадают</string>
    <string name="sign_up_title">Регистрация</string>
    <string name="support_service">Ваше Сообщение</string>
    <string name="next_button">Продолжить</string>
    <string name="pay_button">Оплатить</string>
    <string name="remove_account">Удалить Профиль</string>
    <string name="update_profile_button">Обновить Профиль</string>
    <string name="update_password_button">Обновить Пароль</string>
    <string name="cancel_button">Отменить</string>
    <string name="take_profile_photo">Сделать Фото</string>
    <string name="already_signup">Уже зарегистрированы ?</string>
    <string name="confirm_code_title">Введите Код</string>
    <string name="confirm_code_button">Подтвердить</string>
    <string name="resend_confirm_code">Отправить Код Повторно</string>
    <string name="success_sign_up">Вы успешно зарегистрированы</string>
    <string name="personal_area_title">Личный кабинет</string>
    <string name="order_title">Мои Заказы</string>
    <string name="sign_out">Выход</string>
    <string name="select">Выберите</string>
    <string name="edit_profile_menu">Редактировать профиль</string>
    <string name="your_profile">Профиль</string>
    <string name="change_pswd_menu">Сменить пароль</string>
    <string name="address_menu">Адрес доставки</string>
    <string name="pay_type_menu">Способ оплаты</string>
    <string name="my_bonus_menu">Мои бонусы</string>
    <string name="resend_password">Отправить Пароль</string>
    <string name="thank_label">Спасибо</string>
    <string name="success_sign_in_label">Вы Успешно Зарегистрировались</string>
    <string name="success_change_password">Ваш Праоль Изменен</string>
    <string name="city_place">Доставка по Городу</string>
    <string name="not_available">Not Avilable</string>
    <string name="all_company_label">Все заведения</string>
    <string name="filter_company_label">Заведения</string>
    <string name="prompt_name">Ваше Имя</string>
    <string name="take_photo">Получить Фото</string>

    <string name="filter_dish">Блюда</string>
    <string name="filter_kitchen">Кухни</string>
    <string name="filter_pay_type">Способы оплаты</string>
    <string name="filter_additional">Долнительно</string>
    <string name="filter_title">Фильтр</string>
    <string name="apply_filter">Применить Фильтр</string>
    <string name="show_all_dish">Показать Все Блюда</string>
    <string name="show_all_company">Показать Все Заведения</string>
    <string name="show_all_kitchen">Показать Все Кухни</string>
    <string name="hide_label">Скрыть</string>
    <string name="hide_all">Скрыть Все</string>
    <string name="hide_all_dishes">Скрыть Блюда</string>
    <string name="hide_all_company">Скрыть Заведения</string>
    <string name="clear_filter">Очистить</string>
    <string name="filter_by_label">Отобрано по</string>
    <string name="title_activity_dish">DishActivity</string>
    <string name="search_comapny_hint">Найти заведение</string>
    <string name="find_dish_hint">Найти блюдо</string>
    <string name="buy_entity">Купить</string>
    <string name="add_to_basket">В Корзину</string>
    <string name="back_label">НАЗАД</string>
    <string name="company_menu_title">МЕНЮ ЗАВЕДЕНИЯ</string>
    <string name="all_dishes_label">Все Блюда от </string>
    <string name="all_review_btn">Все Отзывы</string>
    <string name="delivery_house">Часы Доставки</string>
    <string name="add_favorite_error">Добавление заведений в список избранного доступно только зарегистрированным пользователям</string>
    <string name="added_to_favorite">Добавлено в Избранное</string>
    <string name="removed_from_favorite">Удалено из Избранного</string>
    <string name="multiply_order">Групповой Заказ</string>
    <string name="company_gift">Акции</string>
    <string name="profile_basket">Корзина</string>
    <string name="discount">Скидки</string>
    <string name="my_orders">Мои Заказы</string>
    <string name="profile_support">Служба Поддержки</string>
    <string name="splash_crimean">Крымская</string>
    <string name="splash_service">Cлужба Заказа Еды</string>
    <string name="finish_thanks">Спасибо за Заказ !</string>
    <string name="splash_desc_one">Легко! Удобно! Быстро!</string>
    <string name="splash_desc_two">Оформите Ваш заказ всего в несколько кликов!</string>
    <string name="splash_desc_three">ЕдаНяма, доставка из лучших ресторанов !</string>
    <string name="no_bonus">У Вас пока нет бонусов!</string>
    <string name="empty_basket_msg">Ваша корзина пуста</string>
    <string name="check_out">Оформить Заказ</string>
    <string name="check_out_title">Ваш Заказ</string>
    <string name="contact_info_title">Контактная информация</string>
    <string name="delivery_address">Адрес Доставки</string>
    <string name="order_day">Дата Заказа</string>
    <string name="order_time">Время Заказа</string>
    <string name="order_status">Статус Заказа</string>
    <string name="status_processing">Обрабатывается Оператором</string>
    <string name="status_wait_payment">Ожидается Оплата</string>
    <string name="additional_address">Подъезд, этаж и т.д.</string>
    <string name="city_label">Город</string>
    <string name="street_label">Улица</string>
    <string name="house_label">Дом</string>
    <string name="entrace_label">Подъезд</string>
    <string name="intercom_label">Домофон</string>
    <string name="floor_label">Этаж</string>
    <string name="not_available_yet">Пока Недоступно</string>
    <string name="check_out_btn">Заказать</string>
    <string name="sending_confirmation_code">Вам отправлен код подтверждения</string>
    <string name="order_number_label">НОМЕР ЗАКАЗА</string>
    <string name="continue_order">Продолжить</string>
    <string name="no_it_joke">Это ошибка</string>
    <string name="removed_from_system">%s успешно удален из системы</string>
    <string name="yes_sure">Да, уверен</string>
    <string name="go_back">НАЗАД</string>
    <string name="change_passord_title">Изменить Пароль</string>
    <string name="accept_message">Принять</string>
    <string name="decline_message">Отменить</string>
    <string name="cash_label">Наличными</string>
    <string name="online_label">Онлайн</string>
    <string name="my_bonuses">Мои Бонусы</string>
    <string name="order_status_in_progress">Выполняется</string>
    <string name="order_status_succes">Доставленные</string>
    <string name="order_status_decline">Отклоненные</string>
    <string name="details_label">Подробно</string>
    <string name="order_number">Заказ №</string>
    <string name="leave_feedback">Отзыв</string>
    <string name="rate_label">Ваша Оценка</string>
    <string name="leave_feedback_btn">Оставить отзыв</string>
    <string name="feedback_empty">Отзывов о заведении пока нет.</string>
    <string name="first_feedback">Оставьте Cвой отзыв, будьте Первым !</string>
    <string name="message_title">Сообщение</string>
    <string name="promotion">Акции</string>
    <string name="post_btn">Опубликовать</string>
    <string name="send_to_support">Отправить</string>
    <string name="back_btn_label">Назад</string>

</resources>
