<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/first_section" android:checkableBehavior="all">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_outline_black_24dp"
            android:title="@string/nav_menu_home" />
        <item
            android:id="@+id/nav_all_company"
            android:icon="@drawable/ic_room_service_outline_black_24dp"
            android:title="@string/nav_menu_company" />
        <item
            android:id="@+id/nav_all_dish"
            android:icon="@drawable/ic_fastfood_black_24dp"
            android:title="@string/nav_menu_dish" />
        <item
            android:id="@+id/nav_basket"
            android:icon="@drawable/ic_cart_outline_black_24dp"
            android:title="@string/nav_menu_basket" />
    </group>

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_outline_settings_black_24dp"
        android:title="@string/action_settings" />
</menu>
