<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/fragment_margin_top"
    android:layout_marginBottom="@dimen/fragment_margin_bottom"
    tools:context=".fragment.SignInFragment">

    <TextView
        android:id="@+id/loginTitleId"
        style="@style/splashText"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/login_title" />

    <TextView
        android:id="@+id/forgotPassword"
        style="@style/greenLabel"
        android:layout_below="@+id/loginTitleId"
        android:layout_alignParentRight="true"
        android:layout_marginTop="8dp"
        android:layout_marginRight="36dp"
        android:text="@string/fogot_password" />

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/loginFormId"
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:layout_below="@+id/loginTitleId"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="36dp"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                style="@style/AppInputLayout"
                android:id = "@+id/loginTextLayoutId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="false"
                app:errorTextAppearance="@style/errorText"
                android:hint="@string/prompt_email">

                <android.support.v7.widget.AppCompatEditText
                    style="@style/AppEditText"
                    android:theme="@style/editTextTheme"
                    android:id="@+id/emailPhoneId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="kpk_08@mail.ru"
                    />
                <TextView
                    style="@style/errorText"
                    android:visibility="gone"
                    android:id="@+id/loginErrorFieldId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/error_required_field"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/AppInputLayout"
                android:id = "@+id/passwordTextLayoutId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="false"
                app:passwordToggleEnabled="true">

                <android.support.v7.widget.AppCompatEditText
                    style="@style/AppEditText"
                    android:theme="@style/editTextTheme"
                    android:id="@+id/passwordId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:text="12345678"/>

                <TextView
                    style="@style/errorText"
                    android:id="@+id/passwordErrorFieldId"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/error_required_field"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <Button
        android:layout_below="@+id/loginFormId"
        android:id="@+id/signInButtonId"
        android:elevation="6dp"
        android:background="@drawable/button_neon"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="32dp"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/sign_in"/>
    <LinearLayout
        android:id="@+id/registrationQuestionId"
        android:layout_below="@+id/signInButtonId"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/notSignUpId"
            style="@style/grayTextSmall"
            android:text="@string/not_register"/>
        <TextView
            android:id="@+id/signUpId"
            style="@style/greenLabel"
            android:padding="6dp"
            android:text="@string/registration"/>
    </LinearLayout>

    <View
        android:layout_below="@+id/registrationQuestionId"
        android:id="@+id/separatorLineId"
        android:layout_width="match_parent"
        android:layout_marginTop="24dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginRight="12dp"
        android:background="@color/grayTextColor"/>
    <TextView
        style="@style/grayTextSmall"
        android:id="@+id/otherLoginId"
        android:layout_below="@+id/separatorLineId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:text="или войти через"/>

    <Button
        android:layout_below="@+id/otherLoginId"
        android:id="@+id/signWithGoogleId"
        android:elevation="6dp"
        android:drawableTop="@drawable/ic_google_plus_48dp"
        android:background="?attr/selectableItemBackground"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        android:layout_width="48dp"
        android:layout_height="48dp"/>


</RelativeLayout>