<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profileContainerId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueNeon">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="478dp"
        android:layout_marginLeft="210dp"
        android:layout_marginTop="81dp"
        android:background="@drawable/border_neon_18" />

    <RelativeLayout
        android:id="@+id/snapShotLayoutId"
        android:layout_width="360dp"
        android:layout_height="640dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="-24dp"
        android:background="@drawable/border_debug_blue" />

    <ImageView
        android:id="@+id/profileBackBtnId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/filter_back_btn" />

    <LinearLayout
        android:id="@+id/profileMenuId"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="36dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/profileSignHeaderId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_gravity="center"
                android:layout_marginTop="48dp"
                app:srcCompat="@drawable/avatar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/profileSignInId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/login_title"
                    android:textColor="@color/white" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:background="@color/grayTextColor"></View>

                <TextView
                    android:id="@+id/profileSignUpId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/sign_up_title"
                    android:textColor="@color/white" />
            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:id="@+id/profilePersonalHeaderId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_gravity="center"
                android:layout_marginTop="48dp"
                card_view:cardCornerRadius="64dp"
                card_view:cardElevation="1dp">

                <ImageView
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:cropToPadding="true"
                    app:srcCompat="@drawable/avatar_logo" />
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/profilePersonalAreaId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/personal_area_title"
                    android:textColor="@color/white" />


            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/profileBasketId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:drawableLeft="@drawable/ic_cart_outline_white_18dp"
            android:drawablePadding="6dp"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:text="@string/profile_basket"/>

        <TextView
            android:id="@+id/profileMultiplyOrderId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:drawableLeft="@drawable/ic_account_multiple_check_white_18dp"
            android:drawablePadding="6dp"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:text="@string/multiply_order"/>

        <TextView
            android:id="@+id/profileGiftId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:textSize="18dp"
            android:drawableLeft="@drawable/ic_gift_outline_white_18dp"
            android:drawablePadding="8dp"
            android:textColor="@color/white"
            android:text="@string/company_gift"/>

        <TextView
            android:id="@+id/profileDiscountId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:drawableLeft="@drawable/ic_sack_percent_white_18dp"
            android:drawablePadding="8dp"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:text="@string/discount"/>

        <TextView
            android:id="@+id/profileOrderId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:drawableLeft="@drawable/ic_bag_personal_outline_white_18dp"
            android:drawablePadding="8dp"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:text="@string/my_orders"/>


        <TextView
            android:id="@+id/profileSupportId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:drawableLeft="@drawable/ic_face_agent_white_18dp"
            android:drawablePadding="8dp"
            android:textSize="14dp"
            android:textColor="#eaeaea"
            android:text="@string/profile_support"/>

    </LinearLayout>
</FrameLayout>